Bug 629289 - forcing value to bool (performance warning C4800), r=davidb, a=davidb