accessible/src/base/nsAccessible.h
@@ -237,7 +237,7 @@ public:
   /**
    * Cache children if necessary. Return true if the accessible is defunct.
    */
-  PRBool EnsureChildren();
+  bool EnsureChildren();
 
   /**
    * Set the child count to -1 (unknown) and null out cached child pointers.
@@ -319,7 +319,7 @@ public:
   PRUint32 GetCachedChildCount() const { return mChildren.Length(); }
   nsAccessible* GetCachedChildAt(PRUint32 aIndex) const { return mChildren.ElementAt(aIndex); }
   PRBool AreChildrenCached() const { return mChildrenFlags != eChildrenUninitialized; }
-  bool IsBoundToParent() const { return mParent; }
+  bool IsBoundToParent() const { return !!mParent; }
 
   //////////////////////////////////////////////////////////////////////////////
   // Miscellaneous methods
